# extractai

./: .gitignore  AGENTS.md  LICENSE  README.md  extractai_basic_demo.ipynb  extractai_batch_demo.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
.streamlit/: config.toml
extractai/: __init__.py  app.py  cli.py  core.py  extractai-app.py
scripts/: test_pipeline.sh
tests/: test_core.py
